--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.myteek</groupId>
         <artifactId>myteek-base</artifactId>
         <version>2.0-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <groupId>com.myteek</groupId>
